
    Reporting & Availability:
    * 0991 FIX: Availability: optionally show time stamps as UNIX epoch time...

    Event Console:
    * 1040 FIX: Avoid sporadic errors when checking event state in Event Console...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service
    * 0951 FIX: table servicegroups: fixed service visibility when using AUTH_STRICT...

    HW/SW-Inventory:
    * 0625 hw/sw inventory now reads the kernel version and architecture for linux and windows
    * 0627 lnx_video, win_video: added inventory function and agent for linux video cards, modified windows inventory function
    * 0629 improvements to windows sw/hw inventory (encoding, more details for sw inventory)
    * 0630 win_disks: hardware inventory for physical disks in windows
    * 0167 FIX: mk_inventory.linux: Changed field separator from pipe to tab...
    * 1005 FIX: Fix exception when using pretty-print output format
    * 0946 FIX: hw/sw inventory: fixed display bug for byte fields with the value 0...


1.2.5i4:
    Core & Setup:
    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...

    Checks & Agents:
    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
    * 0986 citrix_licenses: new check for monitoring Citrix licenses
    * 0814 Agent versions can now be checked with "at least version X" parameters...
    * 0815 mysql_slave: New check for monitoring MySQL slave sync state
    * 0617 adva_fsp_if: new check to monitor interfaces of the ADVA FSP 3000 scalable optical transport solution
    * 0618 adva_fsp_current: new check for the power supply units of the ADVA FSP 3000 scalable optical transport solution
    * 0619 adva_fsp_temp: new check to monitor temperature and temperature trends on ADVA scalable optical transport solutions
    * 0993 raritan_pdu_inlet: now delivers performance data