@@ -1,0 +1,46 @@
+#!/bin/bash
+
+# Run and *send* only once every 4 hours
+INTERVAL=14400
+
+FLAGFILE=$MK_CONFDIR/mk_inventory.last.$REMOTE
+NOW=$(date +%s)
+UNTIL=$((NOW + INTERVAL + 600))
+
+#check if flagfile exits
+if [ -e "$FLAGFILE" ]; then
+    LAST_RUN=$(cat $FLAGFILE)
+else
+    #First run of the script
+    LAST_RUN=0
+fi
+
+if [ $(( NOW - LAST_RUN )) -ge $INTERVAL ]
+then
+    echo $NOW > $FLAGFILE
+
+    # List of installed AIX packages
+    if type lslpp >/dev/null; then
+        echo "<<<aix_packages:sep(58):persist($UNTIL)>>>"
+        lslpp -c -L
+    fi
+    
+    if type oslevel > /dev/null; then
+        # base level of the system
+        echo "<<<aix_baselevel:persist($UNTIL)>>>"
+        oslevel 
+
+        # list the known service packs on a system
+        echo "<<<aix_service_packs:persist($UNTIL)>>>"
+        oslevel -s
+    fi
+
+    # If you run the prtconf command without any flags, it displays the system model, machine serial, 
+    # processor type, number of processors, processor clock speed, cpu type, total memory size, network information, filesystem
+    # information, paging space information, and devices information.
+    if type prtconf >/dev/null ; then
+        echo "<<<prtconf:sep(58):persist($UNTIL)>>>"
+        prtconf 
+    fi
+fi
+
