@@ -545,6 +545,7 @@ inventory_displayhints.update({
     ".hardware."                                       : { "title" : _("Hardware"), "icon" : "hardware", },
     ".hardware.bios."                                  : { "title" : _("BIOS"), },
     ".hardware.bios.vendor"                            : { "title" : _("Vendor"), },
+    ".hardware.bios.version"                           : { "title" : _("Version"), },
     ".hardware.chassis."                               : { "title" : _("Chassis"), },
     ".hardware.cpu."                                   : { "title" : _("Processor"), },
     ".hardware.cpu.model"                              : { "title" : _("Model"), "short" : _("CPU Model"), },
@@ -594,9 +595,14 @@ inventory_displayhints.update({
     ".software."                                       : { "title" : _("Software"), "icon" : "software" },
     ".software.os."                                    : { "title" : _("Operating System") },
     ".software.os.name"                                : { "title" : _("Name"), "short" : _("Operating System") },
+    ".software.os.version"                             : { "title" : _("Version"), },
+    ".software.os.vendor"                              : { "title" : _("Vendor"), },
+    ".software.os.type"                                : { "title" : _("Type"), }, # e.g. "linux"
     ".software.os.kernel_version"                      : { "title" : _("Kernel Version"), "short" : _("Kernel") },
     ".software.os.arch"                                : { "title" : _("Kernel Architecture"), "short" : _("Architecture") },
     ".software.os.service_pack"                        : { "title" : _("Service Pack"), "short" : _("Service Pack") },
+    ".software.os.service_packs:"                      : { "title" : _("Service Packs"), "render" : render_inv_dicttable,
+                                                            "keyorder" : [ "name" ] },
     ".software.packages:"                              : { "title" : _("Packages"), "icon" : "packages", "render": render_inv_dicttable,
                                                            "keyorder" : [ "name", "version", "arch", "package_type", "summary"] },
     ".software.packages:*.name"                        : { "title" : _("Name"), },
