@@ -71,13 +71,14 @@
 
     Livestatus:
     * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service
-    * 0951 FIX: table servicegroups: fixed service visibility when using AUTH_STRICT...
+    * 0951 FIX: table servicegroups: fixed service visibility when using group_authorization AUTH_STRICT...
 
     HW/SW-Inventory:
     * 0625 hw/sw inventory now reads the kernel version and architecture for linux and windows
     * 0627 lnx_video, win_video: added inventory function and agent for linux video cards, modified windows inventory function
     * 0629 improvements to windows sw/hw inventory (encoding, more details for sw inventory)
     * 0630 win_disks: hardware inventory for physical disks in windows
+    * 1046 Added AIX support for HW/SW-Inventory...
     * 0167 FIX: mk_inventory.linux: Changed field separator from pipe to tab...
     * 1005 FIX: Fix exception when using pretty-print output format
     * 0946 FIX: hw/sw inventory: fixed display bug for byte fields with the value 0...
